    20- improve rdivii / rdiviiz [ use divri which may use divri_with_gmp ]
    21- mfparams now returns [N,k,CHI,space or P, Phi] where Phi is the
        cyclotomic polynomials defining the field of values of CHI
    22- inline / unline are now obsolete, use export/unexport
    23- let localprec(p) accept non integral real p [replace by ceil(p)];
        same for localbitprec.

  Added
     1- [libpari] nonsquare_Fl
     2- [libpari] set_avma
BA   3- [libpari] FpXC_FpXQ_eval
     4- [libpari] mulu_interval_step
     5- new file src/basemath/bern.c
     6- [libpari] divisorsu_moebius
     7- [libpari] ZXQ_powu
     8- new GP functions hypergen, airy
     9- [libpari] gc_bool, gc_double, gc_int, gc_long, gc_ulong, gc_NULL
    10- new GP functions strsplit, strjoin
    11- new file src/basemath/str.c
    12- [libpari] has_str_len
BA  13- qfbsolve(Q,n) now support arbitrary integer n.
    14- [libpari] divisorsu_fact_factored
    15- [libpari] qfiseven
    16- [libpari] zv_cyc_minimize, zv_cyc_minimal
    17- limitnum/asympnum: allow closures of the form N->[u(1),...,u(N)],
        which allows to handle efficiently sums, recursions, continued
        fractions, etc.
BA  18- new GP function polteichmuller
BA  19- [libpari] Flx_Teichmuller, F2x_Teichmuller
    20- [libpari] mpsinhcosh
    21- new GP function dirpowers
BA  22- [libpari] F2xqX_resultant, F2xqX_disc, FlxqX_resultant, FlxqX_disc,
        FpXQX_resultant, FpXQX_disc, FFX_resultant, FFX_disc
BA  23- FFX_gcd, FFX_extgcd
    24- optional flag to pollegendre and polhermite
    25- new GP function pollaguerre
BA  26- [libpari] Flxn_red, Flxn_sqr
BA  27- new GP functions export, unexport, exportall, unexportall
    28- [libpari] Fp_divu

  Removed
     1- member functions .futu and .tufu [deprecated since 2.2]
     2- inferior hash function hash_str2: use hash_str
     3- matsnf: remove obsolete binary flag '2' [make it a no no-op] (cf mathnf)