@@ -3105,6 +3105,8 @@ void    writetex(const char *s, GEN g);
 
 enum { br_NONE = 0, br_BREAK, br_NEXT, br_MULTINEXT, br_RETURN };
 void    bincopy_relink(GEN C, GEN vi);
+GEN     bitprecision0(GEN x,long n);
+GEN     bitprecision00(GEN x,GEN n);
 GEN     break0(long n);
 GEN     call0(GEN fun, GEN args);
 GEN     closure_callgen1(GEN C, GEN x);
@@ -3148,6 +3150,8 @@ GEN     parsum(GEN a, GEN b, GEN code, GEN x);
 GEN     parvector(long n, GEN code);
 void    pop_lex(long n);
 void    pop_localprec(void);
+GEN     precision0(GEN x,long n);
+GEN     precision00(GEN x, GEN n);
 void    push_lex(GEN a, GEN C);
 void    push_localbitprec(long p);
 void    push_localprec(long p);
@@ -3464,7 +3468,6 @@ long    ZX_deflate_order(GEN x);
 GEN     ZX_deflate_max(GEN x, long *m);
 long    RgX_degree(GEN x,long v);
 GEN     RgX_integ(GEN x);
-GEN     bitprecision0(GEN x,long n);
 GEN     ceil_safe(GEN x);
 GEN     ceilr(GEN x);
 GEN     centerlift(GEN x);
@@ -3581,7 +3584,6 @@ long    poldegree(GEN x,long v);
 GEN     poleval(GEN x, GEN y);
 GEN     pollead(GEN x,long v);
 long    precision(GEN x);
-GEN     precision0(GEN x,long n);
 GEN     qf_apply_RgM(GEN q, GEN M);
 GEN     qf_apply_ZM(GEN q, GEN M);
 GEN     qfb_apply_ZM(GEN q, GEN M);
